// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Deal Detail State Snapshots Error State should snapshot error state 1`] = `
{
  "deal": null,
  "error": "Deal not found or has been deleted.",
  "loading": false,
  "viewCount": 0,
  "viewerPhotos": [],
}
`;

exports[`Deal Detail State Snapshots Loading State should snapshot loading detail state 1`] = `
{
  "deal": null,
  "error": null,
  "loading": true,
  "viewCount": 0,
  "viewerPhotos": [],
}
`;

exports[`Deal Detail State Snapshots Populated State should snapshot full deal detail structure 1`] = `
{
  "deal": {
    "cuisine": "Mexican",
    "cuisineId": "cuisine-mexican",
    "details": "Full deal description with all the details about this amazing offer.",
    "expirationDate": "2026-03-15",
    "id": "deal-detail-1",
    "image": {
      "uri": "https://example.com/deal.jpg",
    },
    "images": [
      "https://example.com/img1.jpg",
      "https://example.com/img2.jpg",
    ],
    "isAnonymous": false,
    "isDownvoted": false,
    "isFavorited": true,
    "isUpvoted": true,
    "milesAway": "0.3 mi",
    "restaurant": "Snapshot Restaurant",
    "restaurantAddress": "123 Main St, San Francisco, CA 94105",
    "timeAgo": "1h ago",
    "title": "Snapshot Deal Detail",
    "userCity": "San Francisco",
    "userDisplayName": "Deal Author",
    "userId": "user-author-1",
    "userProfilePhoto": "https://example.com/author.jpg",
    "userState": "CA",
    "votes": 75,
  },
  "error": null,
  "loading": false,
  "viewCount": 142,
  "viewerPhotos": [
    "https://example.com/viewer1.jpg",
    "https://example.com/viewer2.jpg",
    "https://example.com/viewer3.jpg",
  ],
}
`;

exports[`Feed State Snapshots Cuisine Filter State should snapshot filtered state structure 1`] = `
{
  "cuisineFilter": "Italian",
  "deals": [
    {
      "cuisine": "Italian",
      "id": "deal-1",
      "title": "Pasta Deal",
    },
    {
      "cuisine": "Italian",
      "id": "deal-2",
      "title": "Pizza Deal",
    },
  ],
  "error": null,
  "hasLocation": true,
  "hasMore": false,
  "loading": false,
  "locationCity": "San Francisco",
  "page": 1,
}
`;

exports[`Feed State Snapshots Empty State - No Deals should snapshot empty deals state structure 1`] = `
{
  "cuisineFilter": "Italian",
  "deals": [],
  "error": null,
  "hasLocation": true,
  "hasMore": false,
  "loading": false,
  "locationCity": "San Francisco",
  "page": 1,
}
`;

exports[`Feed State Snapshots Empty State - No Location should snapshot no location state structure 1`] = `
{
  "cuisineFilter": null,
  "deals": [],
  "error": null,
  "hasLocation": false,
  "hasMore": false,
  "loading": false,
  "locationCity": null,
  "page": 1,
}
`;

exports[`Feed State Snapshots Error State should snapshot error state structure 1`] = `
{
  "cuisineFilter": null,
  "deals": [],
  "error": "Failed to load deals. Please try again.",
  "hasLocation": true,
  "hasMore": false,
  "loading": false,
  "locationCity": "San Francisco",
  "page": 1,
}
`;

exports[`Feed State Snapshots Loading State should snapshot loading state structure 1`] = `
{
  "cuisineFilter": null,
  "deals": [],
  "error": null,
  "hasLocation": true,
  "hasMore": false,
  "loading": true,
  "locationCity": "San Francisco",
  "page": 1,
}
`;

exports[`Feed State Snapshots Populated State should snapshot paginated state structure 1`] = `
{
  "cuisineFilter": null,
  "deals": [
    {
      "id": "deal-1",
      "restaurant": "Restaurant 1",
      "title": "Deal 1",
      "votes": 10,
    },
    {
      "id": "deal-2",
      "restaurant": "Restaurant 2",
      "title": "Deal 2",
      "votes": 20,
    },
    {
      "id": "deal-3",
      "restaurant": "Restaurant 3",
      "title": "Deal 3",
      "votes": 30,
    },
    {
      "id": "deal-4",
      "restaurant": "Restaurant 4",
      "title": "Deal 4",
      "votes": 40,
    },
    {
      "id": "deal-5",
      "restaurant": "Restaurant 5",
      "title": "Deal 5",
      "votes": 50,
    },
    {
      "id": "deal-6",
      "restaurant": "Restaurant 6",
      "title": "Deal 6",
      "votes": 60,
    },
    {
      "id": "deal-7",
      "restaurant": "Restaurant 7",
      "title": "Deal 7",
      "votes": 70,
    },
    {
      "id": "deal-8",
      "restaurant": "Restaurant 8",
      "title": "Deal 8",
      "votes": 80,
    },
    {
      "id": "deal-9",
      "restaurant": "Restaurant 9",
      "title": "Deal 9",
      "votes": 90,
    },
    {
      "id": "deal-10",
      "restaurant": "Restaurant 10",
      "title": "Deal 10",
      "votes": 100,
    },
  ],
  "error": null,
  "hasLocation": true,
  "hasMore": true,
  "loading": false,
  "locationCity": "San Francisco",
  "page": 2,
}
`;

exports[`Feed State Snapshots Populated State should snapshot populated state structure 1`] = `
{
  "cuisineFilter": null,
  "deals": [
    {
      "cuisine": "Italian",
      "details": "Buy one get one free",
      "id": "deal-1",
      "isDownvoted": false,
      "isFavorited": true,
      "isUpvoted": false,
      "milesAway": "1.5 mi",
      "restaurant": "Pizza Palace",
      "timeAgo": "2h ago",
      "title": "Amazing Pizza Deal",
      "votes": 42,
    },
    {
      "cuisine": "American",
      "details": "50% off drinks 4-7pm",
      "id": "deal-2",
      "isDownvoted": false,
      "isFavorited": false,
      "isUpvoted": true,
      "milesAway": "0.8 mi",
      "restaurant": "Bar & Grill",
      "timeAgo": "4h ago",
      "title": "Happy Hour Special",
      "votes": 28,
    },
  ],
  "error": null,
  "hasLocation": true,
  "hasMore": true,
  "loading": false,
  "locationCity": "San Francisco",
  "page": 1,
}
`;
